# rukn-zatca-connector

./: .pre-commit-config.yaml  CHANGELOG.md  README.md  ZATCA_TEST_PREPARATION.md  pyproject.toml
.github/: CODEOWNERS
.github/scripts/: check-reviews.js  test_setup.py
.github/workflows/: ci.yml  linters.yml
ksa_compliance/: __init__.py  background_jobs.py  compliance_checks.py  design.md  generate_xml.py  hooks.py  install.py  invoice.py  jinja.py  patches.txt  zatca_api.py  zatca_cli.py  zatca_files.py  zatca_guard.py
ksa_compliance/output_models/: e_invoice_output_model.py
ksa_compliance/patches/: _2024_02_27_add_counting_docs_for_existing_settings.py  _2024_03_20_update_blank_integration_status_in_additional_field.py  _2024_03_21_update_last_attempt_in_additional_fields.py  _2024_03_21_uuid_indexes.py  _2024_06_13_remove_custom_fields_from_sales_invoice.py  _2024_07_08_set_siaf_is_latest.py  _2024_08_19_update_old_fatoora_url_in_business_settings.py  _2024_09_04_delete_obsolete_print_formats.py  _2024_09_18_migrate_zatca_files_under_site.py  _2025_10_30_remove_zatca_payment_means_code_reqd_property_setter.py  create_mode_of_payment_account_field.py  create_posting_time_field.py  zatca.py
ksa_compliance/standard_doctypes/: branch.py  gl_entry.py  payment_entry.py  payment_reconciliation.py  sales_invoice.py  sales_invoice_advance.py  sales_invoice_item.py  tax_category.py  unreconcile_payment.py
ksa_compliance/templates/: csr-config.properties  e_invoice.xml
ksa_compliance/test/: test_constants.py  test_setup.py  test_zatca_erpnext.sh
(+51 files in other folders)
